<resources>
    <string name="app_name">MADAssignmentTeam1</string>
    <string name="nth">image</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="change_pwd">Change Password</string>
    <string name="logout">Logout</string>
    <string name="registration">Registration</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="get_link">Get Link</string>
    <string name="home_text">Welcome to CityGuideSG</string>
    <string name="btn1">Log in</string>
    <string name="loading">Loading</string>
    <string name="car_park">Carpark Finder</string>
    <string name="fav_locations">Favourite Locations</string>
    <string name="rec_places">Recommended Places</string>
    <string name="welcome">Welcome</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="acc_exist_text">Already have an account? Click here to log in</string>
    <string name="btn2">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="create_acc_text">Create Account?</string>
    <string name="forgot_pwd_text">Forgot Password?</string>
    <string name="password_link_text">Please enter email to receive password reset link</string>
    <string name="back">Back</string>
    <string name="reset">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="new_pwd_text">New Password</string>
    <string name="pwd_content">Please enter your password and verify before continuing.</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="new_pwd">Enter your new password</string>
    <string name="new_pwd_cfm">Confirm your new password</string>
    <string name="edit_new_email">Enter your new email</string>
    <string name="edit_current_email">Enter your current email</string>
    <string name="edit_current_pwd">Enter your current password</string>
    <string name="email_text">Please verify your email and password before continuing.</string>
    <string name="authenticate">Authenticate</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="password_auth">Your profile is not authenticated yet!</string>
    <string name="edit_password">Enter your password</string>
    <string name="favourite_locations_header_text">Your Favourite Locations</string>
    <string name="favourite_location_list_element_location_placeholder_address">Location Address</string>
    <string name="view_map_button_text">View map</string>
    <string name="map_viewer_activity_search_bar_hint_text">Search for locations here</string>
    <string name="toggle_location_favourite_status_button_add_mode_text">Add to favourite locations</string>
    <string name="selected_location_name">Selected Location</string>
    <string name="address_placeholder">Address:</string>
    <string name="postal_code">Postal:</string>
    <string name="recommended_items">Recommended items</string>
    <string name="location_name">Location name</string>
    <string name="toggle_location_favourite_status_button_remove_mode_text">Remove from favourite locations</string>
    <string name="return_to_favourite_locations_activity_button">Return to favourite locations</string>
    <string name="image_description">image description</string>
    <string name="title_text">title</string>
    <string name="description_text">description</string>
    <string name="return_to_home_activity_button_text">Return to home</string>
    <string name="car_park_description">Description</string>
    <string name="carlots">Lots</string>
    <string name="motorlots">Lots</string>
    <string name="trucklots">Lots</string>
    <string name="language">Language Translator</string>
    <string name="fastest">Fastest Routes</string>
    <string name="search">Search for Hotels</string>
    <string name="bus_timing">Bus Timings</string>
    <string name="translate_text">Translate</string>
    <string name="enter_text">Enter text here</string>
    <string name="source_language">English</string>
    <string name="destination_language">Chinese</string>
    <string name="search_hotel">Search Places/Hotels</string>
    <string name="find_directions_button_text">Find directions</string>
    <string name="transport_mode_input_field_textview_content">Mode of transport:</string>
    <string name="origin_location_text_edit_hint">Enter a starting location here...</string>
    <string name="destination_location_text_edit_hint">Enter a destination location here...</string>
    <string name="find_route_button_text">Find route</string>
    <string name="bus_arrival">Bus Arrival</string>
    <string name="bus">Bus Timings</string>
    <string name="carpark_lots">Carpark Lots</string>
    <string name="found_routes_header_text">List of routes found</string>
    <string name="route_details_header_text">Steps</string>
    <string name="route_duration_textview_placeholder_text">32 mins</string>
    <string name="route_distance_textview_placeholder_text">10 km</string>
    <string name="close_button_content_description">This button is a close button. It will close or hide the selected location details card once it is pressed.</string>
    <string name="placeholder_route_instruction">Route instruction goes here.</string>
    <string name="placeholder_route_name">[Start location name] to [End location name]</string>
    <string name="finding_routes_text">Finding routes for you. Please wait...</string>
    <string name="loading_found_routes_list_text">Loading routes. Please wait...</string>
    <string name="no_routes_found_text">No routes were found.</string>
    <string name="return_to_found_routes_card_button_content_description">A button which can be pressed to return to the list of routes found.</string>
    <string name="total_records">Total Records: %1$d</string>
    <string name="category">Category: %1$s</string>
    <string name="back_button_text">Back</string>
    <string name="search_hint">Search Here...</string>
    <string name="total_records_text">Total Records: %1$d</string>
    <string name="attractions">Attractions</string>
    <string name="barclubs">BarClubs</string>
    <string name="cruises">Cruises</string>
    <string name="events">Events</string>
    <string name="restaurant">Restaurants</string>
    <string name="precincts">Precincts</string>
    <string name="shops">Shops</string>
    <string name="tours">Tours</string>
    <string name="venues">Venues</string>
    <string name="walking">WalkingTrails</string>
    <string name="all">All</string>




</resources>