<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="10dp"
    android:background="#F8E68B">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:src="@drawable/place"
        android:contentDescription="@string/image_description"/>


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/imageview"
        android:text="@string/title_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="9dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/imageview"
        android:maxLines="1"
        android:text="@string/description_text"
        android:textColor="@color/black" />


</RelativeLayout>
