<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteProfile">
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/email_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:padding="2dp">

                <TextView
                    android:id="@+id/password_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="61dp"
                    android:layout_marginEnd="3dp"
                    android:text="@string/pwd_content"
                    android:textAlignment="center"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_content"
                    android:layout_marginTop="50dp"
                    android:padding="6dp"
                    android:text="@string/password"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_text"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/edit_text_design"
                    android:ems="10"
                    android:textColorHint="#838282"
                    android:importantForAutofill="no"
                    android:hint="@string/edit_password"
                    android:inputType="textPassword"
                    android:padding="17dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/authenticate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_input"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="90dp"
                    android:layout_marginBottom="80dp"
                    android:background="@drawable/button_design"
                    android:padding="5dp"
                    android:text="@string/authenticate"
                    android:textColor="@color/white" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_relative"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:padding="5dp">


                <TextView
                    android:id="@+id/delete_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="35dp"
                    android:padding="6dp"
                    android:text="@string/password_auth"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/delete_profile"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/delete_text"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="90dp"
                    android:layout_marginLeft="90dp"
                    android:background="@drawable/button_design"
                    android:padding="5dp"
                    android:text="@string/delete_profile"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7195EF"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>
