<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="83dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="376dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editPassword"
        android:layout_width="215dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="359dp"
        android:layout_height="330dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/city" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="117dp"
        android:layout_height="52dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="70dp"
        android:background="#911F29"
        android:text="@string/btn1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="117dp"
        android:layout_height="52dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="43dp"
        android:background="#911F29"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="113dp"
        android:layout_height="30dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="45dp"
        android:text="Create Account?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>